--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -8,12 +8,12 @@ USE_IPV6:=1
 INCLUDEPATHS= \
  -I"C:/boost_1_53_0" \
  -I"C:/db-4.8.30.NC/build_unix" \
- -I"C:/openssl-1.0.1g/include"
+ -I"C:/openssl-1.0.2/include"
  
 LIBPATHS= \
  -L"C:/boost_1_53_0/stage/lib" \
  -L"C:/db-4.8.30.NC/build_unix" \
- -L"C:/openssl-1.0.1g" 
+ -L"C:/openssl-1.0.2" 
 
 
 LIBS= \
